# speaker-id

./: .gitignore  README.md  pyproject.toml  ruff.toml
data/: example.txt
scripts/evaluate/: base_evaluate.py  evaluate_llama.py  evaluate_local_llm.py  evaluate_open_ai.py
scripts/predict/: base_predict.py  predict_llama.py  predict_local_llm.py  predict_open_ai.py
scripts/process/: process_text_meta_for_training_set.py  process_text_to_text_meta.py
scripts/types/: config_types.py  statistic_types.py
scripts/utils/: common.py  prepare_text_item_for_llm_processing.py
src/common/: constants.py  project_types.py  utils.py
src/metrics/: metric_types.py  metrics.py
src/models/llm_clients/: base.py  llama.py  local_llm.py  open_ai.py
src/models/llm_clients/configs/: llama.py  local_llm.py  open_ai.py
src/models/llm_clients/prompts/: __init__.py  local_llama_multi.py  local_llama_single.py  single_prompt.py
src/models/nlp/: constants.py  custom_infix.py  custom_tokenizer.py  init_model.py
src/preprocess/chapter_processor/: chapter_processor.py  join_quotes_with_narrative.py
src/preprocess/document_reader/: base.py  document_reader.py  epub_reader.py  txt_reader.py
src/preprocess/quote_finder/: constants.py  quote_finder.py
src/preprocess/quote_finder/tests/: test_quote_finder.py
